deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deall-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deall-test
  template:
    metadata:
      labels:
        app: deall-test
    spec:
      containers:
      - name: deall-test
        image: gcr.io/vibrant-mind-385210/deall-test:latest
        ports:
          - containerPort: 3000
