app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deall-test
spec:
  selector:
    app: deall-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
